# Model-Auto-Pilot

./: .gitignore  Readme.md  main.py  pyproject.toml
hf_mcp/: mcp_client.py  server.py
hf_mcp/core/: __init__.py  model_utils.py
hf_mcp/tools/: install_instruction.py  model_search.py  summarize.py
