[project]
name = "model-auto-pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "gradio>=5.38.0",
    "huggingface-hub>=0.33.4",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.8",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.5",
    "langgraph>=0.5.3",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "mcp[cli]>=1.12.0",
    "nest-asyncio>=1.6.0",
]
